# 12_pinkbombs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
12_pinkbombs/: __init__.py  data.py  viz.py
data/: alternatives_colors_7.csv  alternatives_text_7.csv  alternatives_text_7_fr.csv  antibiotic_consumption_chile_4.2.csv  atlantic_salmon-aquaculture_tonnes_live_weight_by_country_by_year.xlsx  cabon_emissions_productors_5.1.csv  carbon_bombs_pie_chart_5.1.csv  carbon_emissions_productors_5.1.csv  carbon_emissions_productors_5.1_fr.csv  country_pays.csv  discrease_wild_salmon_1.1.csv  discrease_wild_salmon_1.1_fr.csv  escapes_marine_cages_3.5.csv  evolution_salmon_farming_country_1.4.csv  evolution_salmon_farming_country_iso_1.4.csv  evolution_salmon_farming_country_iso_1.4_fr.csv  foodchoices_text_7_fr.csv  hyper_growth_salmon_farming_1.2_fr.csv  mortality_rates_4.4.csv  mortality_rates_4.4_fr.csv  numbers_salmons_farmed_1.0.csv  numbers_salmons_farmed_1.0_fr.csv  production_saumon_page_story.csv  ras_projects_for_map_2.4.csv  ras_projects_for_map_2.4_fr.csv  social_mill_fishing_6.csv  social_mill_fishing_6_fr.csv  top_10_companies_producing_2.1.csv  top_10_companies_producing_2.1_fr.csv  top_10_countries_producing_1.3.csv  top_10_countries_producing_1.3_fr.csv  top_10_land_based_companies_2.3.csv  top_10_ras_companies_2.3.csv  top_10_ras_companies_2.3_fr.csv  top_15_countries_consuming_1.5.csv  (+2 more)
pages/: 1_data.py  (+1 more)
src/streamlit/pinkbombs/viz/: main_viz.py  page_2.py  pyproject.toml
src/streamlit/pinkbombs/viz/modules/: graphe.py
(+75 files in other folders)
